--- a/dags/parsing.ipynb
+++ b/dags/parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "54b893e6",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,8 @@
     "import endpoints\n",
     "from datetime import datetime, timedelta\n",
     "# from config import SITE_EMAIL, SITE_PASSWORD\n",
-    "import time"
+    "import time\n",
+    "import numpy as np"
    ]
   },
   {
@@ -76,11 +77,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ba83719e",
+   "execution_count": 3,
+   "id": "6fcf681b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.set_option('display.max_rows', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9efbcacc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('l1_l2_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6b70cc18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Заменяем строки с кавычками на NaN\n",
+    "df['l2_id'] = df['l2_id'].replace('', pd.NA, regex=False)\n",
+    "\n",
+    "# Заполняем NaN значениями из l1_id\n",
+    "df['l2_id'] = df['l2_id'].fillna(df['l1_id'])"
+   ]
   }
  ],
  "metadata": {
