--- a/dags/parsing.ipynb
+++ b/dags/parsing.ipynb
@@ -55,6 +55,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "id": "a9e9f486",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>l3_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>ordersSum</th>\n",
+       "      <th>orders</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Автотовары &gt; OFFroad</td>\n",
+       "      <td>7.079448e+18</td>\n",
+       "      <td>2025-08-23T00:00:00+00:00</td>\n",
+       "      <td>450918</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Автотовары &gt; OFFroad</td>\n",
+       "      <td>7.079448e+18</td>\n",
+       "      <td>2025-08-24T00:00:00+00:00</td>\n",
+       "      <td>396691</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Автотовары &gt; OFFroad</td>\n",
+       "      <td>7.079448e+18</td>\n",
+       "      <td>2025-08-25T00:00:00+00:00</td>\n",
+       "      <td>422077</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Автотовары &gt; OFFroad</td>\n",
+       "      <td>7.079448e+18</td>\n",
+       "      <td>2025-08-26T00:00:00+00:00</td>\n",
+       "      <td>401658</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Автотовары &gt; OFFroad</td>\n",
+       "      <td>7.079448e+18</td>\n",
+       "      <td>2025-08-27T00:00:00+00:00</td>\n",
+       "      <td>540695</td>\n",
+       "      <td>211</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>Автотовары &gt; Другие аксессуары и доп. оборудов...</td>\n",
+       "      <td>1.478505e+19</td>\n",
+       "      <td>2025-09-17T00:00:00+00:00</td>\n",
+       "      <td>2673809</td>\n",
+       "      <td>5605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>Автотовары &gt; Другие аксессуары и доп. оборудов...</td>\n",
+       "      <td>1.478505e+19</td>\n",
+       "      <td>2025-09-18T00:00:00+00:00</td>\n",
+       "      <td>2408550</td>\n",
+       "      <td>4749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1497</th>\n",
+       "      <td>Автотовары &gt; Другие аксессуары и доп. оборудов...</td>\n",
+       "      <td>1.478505e+19</td>\n",
+       "      <td>2025-09-19T00:00:00+00:00</td>\n",
+       "      <td>2535199</td>\n",
+       "      <td>4951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1498</th>\n",
+       "      <td>Автотовары &gt; Другие аксессуары и доп. оборудов...</td>\n",
+       "      <td>1.478505e+19</td>\n",
+       "      <td>2025-09-20T00:00:00+00:00</td>\n",
+       "      <td>2431918</td>\n",
+       "      <td>5323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>Автотовары &gt; Другие аксессуары и доп. оборудов...</td>\n",
+       "      <td>1.478505e+19</td>\n",
+       "      <td>2025-09-21T00:00:00+00:00</td>\n",
+       "      <td>2535763</td>\n",
+       "      <td>5368</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1500 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   name         l3_id  \\\n",
+       "0                                  Автотовары > OFFroad  7.079448e+18   \n",
+       "1                                  Автотовары > OFFroad  7.079448e+18   \n",
+       "2                                  Автотовары > OFFroad  7.079448e+18   \n",
+       "3                                  Автотовары > OFFroad  7.079448e+18   \n",
+       "4                                  Автотовары > OFFroad  7.079448e+18   \n",
+       "...                                                 ...           ...   \n",
+       "1495  Автотовары > Другие аксессуары и доп. оборудов...  1.478505e+19   \n",
+       "1496  Автотовары > Другие аксессуары и доп. оборудов...  1.478505e+19   \n",
+       "1497  Автотовары > Другие аксессуары и доп. оборудов...  1.478505e+19   \n",
+       "1498  Автотовары > Другие аксессуары и доп. оборудов...  1.478505e+19   \n",
+       "1499  Автотовары > Другие аксессуары и доп. оборудов...  1.478505e+19   \n",
+       "\n",
+       "                           date  ordersSum  orders  \n",
+       "0     2025-08-23T00:00:00+00:00     450918     184  \n",
+       "1     2025-08-24T00:00:00+00:00     396691     156  \n",
+       "2     2025-08-25T00:00:00+00:00     422077     155  \n",
+       "3     2025-08-26T00:00:00+00:00     401658     155  \n",
+       "4     2025-08-27T00:00:00+00:00     540695     211  \n",
+       "...                         ...        ...     ...  \n",
+       "1495  2025-09-17T00:00:00+00:00    2673809    5605  \n",
+       "1496  2025-09-18T00:00:00+00:00    2408550    4749  \n",
+       "1497  2025-09-19T00:00:00+00:00    2535199    4951  \n",
+       "1498  2025-09-20T00:00:00+00:00    2431918    5323  \n",
+       "1499  2025-09-21T00:00:00+00:00    2535763    5368  \n",
+       "\n",
+       "[1500 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "e3f8e034",
    "metadata": {},
@@ -77,109 +244,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "id": "05c79d6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_info_30_days(yesterday_str: str, l3_id: int, today_str: str, session: requests.Session, cookies_dict: dict):\n",
     "\n",
+    "    session.headers.update({\n",
+    "        \"Content-Type\": \"application/json\",\n",
+    "        \"Accept\": \"application/json\",\n",
+    "        \"User-Agent\": \"Mozilla/5.0 (compatible; DataCollector/1.0)\"\n",
+    "    })\n",
+    "\n",
     "    # Формируем JSON query\n",
     "    query_params = {\n",
     "        \"start\": 0,\n",
     "        \"length\": 0,\n",
-    "        \"orderBy\": \"ordersSum\",\n",
-    "        \"orderDirection\": \"desc\",\n",
     "        \"checkDate\": yesterday_str,\n",
-    "        \"periodDays\": 1,\n",
-    "        \"trendType\": \"day\",\n",
-    "        \"filters\": {\n",
-    "            \"showFavoritesOnly\": {\"value\": False}\n",
-    "        }\n",
+    "        \"periodDays\": 30,\n",
     "    }\n",
     "\n",
     "    encoded_query = quote(json.dumps(query_params))\n",
-    "\n",
     "    # Generate dynamic dns-cache\n",
-    "    response = requests.post(f'https://eggheads.solutions/analytics/wbCategory/buildCache/{l3_id}',cookies=cookies_dict)\n",
-    "    time.sleep(1)\n",
+    "    response = session.post(f'https://eggheads.solutions/analytics/wbCategory/buildCache/{l3_id}',cookies=cookies_dict)\n",
+    "\n",
     "    url = f\"https://eggheads.solutions/analytics/wbCategory/getBrandsList/{l3_id}.json?query={encoded_query}&dns-cache={today_str}_09-1\"\n",
     "    response = session.get(url, cookies=cookies_dict)\n",
     "\n",
     "    if response.status_code == 200:\n",
-    "        data = response.json()\n",
     "\n",
-    "        return data['totals']\n",
+    "        return response\n",
     "    else:\n",
     "        print(response.text)\n",
     "        print(url)\n",
-    "\n",
-    "        return data['totals']"
+    "        return response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "25a94196",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('/Users/vnaumq/code/projects/RoadMap/mini-dwh-sales-pipeline/dags/l1_l2_data.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "2fad6ca4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "l1_id      58\n",
-       "l1_name    58\n",
-       "l2_id      58\n",
-       "l2_name    58\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['l1_name'] == 'Сделано в России']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "8c47971f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "l1_id      71\n",
-       "l1_name    71\n",
-       "l2_id      71\n",
-       "l2_name    71\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['l1_name'] == 'Акции'].count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "id": "6f197fbd",
    "metadata": {},
    "outputs": [],
@@ -196,17 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4ba7b04e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "7079448242063961252"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "id": "5e77f25b",
    "metadata": {},
    "outputs": [],
@@ -216,20 +310,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 103,
    "id": "23774005",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = get_info_30_days(yesterday_str, l3_id, today_str, session, cookies_dict)"
+    "response = get_info_30_days(yesterday_str, l3_id, today_str, session, cookies_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "3dcc20de",
+   "execution_count": 104,
+   "id": "91ce4664",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "227be3ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'status': 'ok',\n",
+       " 'items': [],\n",
+       " 'totals': {'brandId': None,\n",
+       "  'lastRemains': None,\n",
+       "  'reviewsCount': None,\n",
+       "  'name': 'Автотовары > OFFroad',\n",
+       "  'isFavorite': False,\n",
+       "  'orders': 6075,\n",
+       "  'ordersSum': 15315308,\n",
+       "  'loosesPercent': 57.33,\n",
+       "  'avgSum': 2521,\n",
+       "  'loosesSum': 8780892,\n",
+       "  'trend': [{'date': '2025-08-23T00:00:00+00:00',\n",
+       "    'ordersSum': 450918,\n",
+       "    'orders': 184},\n",
+       "   {'date': '2025-08-24T00:00:00+00:00', 'ordersSum': 396691, 'orders': 156},\n",
+       "   {'date': '2025-08-25T00:00:00+00:00', 'ordersSum': 422077, 'orders': 155},\n",
+       "   {'date': '2025-08-26T00:00:00+00:00', 'ordersSum': 401658, 'orders': 155},\n",
+       "   {'date': '2025-08-27T00:00:00+00:00', 'ordersSum': 540695, 'orders': 211},\n",
+       "   {'date': '2025-08-28T00:00:00+00:00', 'ordersSum': 685360, 'orders': 223},\n",
+       "   {'date': '2025-08-29T00:00:00+00:00', 'ordersSum': 552036, 'orders': 186},\n",
+       "   {'date': '2025-08-30T00:00:00+00:00', 'ordersSum': 515483, 'orders': 216},\n",
+       "   {'date': '2025-08-31T00:00:00+00:00', 'ordersSum': 491734, 'orders': 215},\n",
+       "   {'date': '2025-09-01T00:00:00+00:00', 'ordersSum': 424013, 'orders': 157},\n",
+       "   {'date': '2025-09-02T00:00:00+00:00', 'ordersSum': 418514, 'orders': 181},\n",
+       "   {'date': '2025-09-03T00:00:00+00:00', 'ordersSum': 391669, 'orders': 143},\n",
+       "   {'date': '2025-09-04T00:00:00+00:00', 'ordersSum': 614588, 'orders': 213},\n",
+       "   {'date': '2025-09-05T00:00:00+00:00', 'ordersSum': 556434, 'orders': 195},\n",
+       "   {'date': '2025-09-06T00:00:00+00:00', 'ordersSum': 481815, 'orders': 186},\n",
+       "   {'date': '2025-09-07T00:00:00+00:00', 'ordersSum': 427817, 'orders': 190},\n",
+       "   {'date': '2025-09-08T00:00:00+00:00', 'ordersSum': 621651, 'orders': 312},\n",
+       "   {'date': '2025-09-09T00:00:00+00:00', 'ordersSum': 1469407, 'orders': 479},\n",
+       "   {'date': '2025-09-10T00:00:00+00:00', 'ordersSum': 280089, 'orders': 130},\n",
+       "   {'date': '2025-09-11T00:00:00+00:00', 'ordersSum': 147539, 'orders': 78},\n",
+       "   {'date': '2025-09-12T00:00:00+00:00', 'ordersSum': 271140, 'orders': 104},\n",
+       "   {'date': '2025-09-13T00:00:00+00:00', 'ordersSum': 627571, 'orders': 250},\n",
+       "   {'date': '2025-09-14T00:00:00+00:00', 'ordersSum': 575192, 'orders': 242},\n",
+       "   {'date': '2025-09-15T00:00:00+00:00', 'ordersSum': 646359, 'orders': 241},\n",
+       "   {'date': '2025-09-16T00:00:00+00:00', 'ordersSum': 827771, 'orders': 240},\n",
+       "   {'date': '2025-09-17T00:00:00+00:00', 'ordersSum': 528408, 'orders': 219},\n",
+       "   {'date': '2025-09-18T00:00:00+00:00', 'ordersSum': 350171, 'orders': 177},\n",
+       "   {'date': '2025-09-19T00:00:00+00:00', 'ordersSum': 389123, 'orders': 199},\n",
+       "   {'date': '2025-09-20T00:00:00+00:00', 'ordersSum': 417293, 'orders': 217},\n",
+       "   {'date': '2025-09-21T00:00:00+00:00', 'ordersSum': 392092, 'orders': 221}],\n",
+       "  'productsCount': None,\n",
+       "  'newProductsCount': None,\n",
+       "  'orderedCardsSum': 0,\n",
+       "  'sharePercent': 0},\n",
+       " 'userBrands': [],\n",
+       " 'filters': {'orders': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'ordersSum': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'loosesPercent': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'avgSum': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'loosesSum': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'name': {'type': 'text', 'value': None},\n",
+       "  'orderedCardsSum': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'productsCount': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'newProductsCount': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'sharePercent': {'type': 'range', 'min': None, 'max': None},\n",
+       "  'lastRemains': {'type': 'range', 'min': None, 'max': None}},\n",
+       " 'request': {'filters': None,\n",
+       "  'checkDate': '2025-09-21T00:00:00+00:00',\n",
+       "  'periodDays': 30,\n",
+       "  'trendType': 'day',\n",
+       "  'draw': 0,\n",
+       "  'start': 0,\n",
+       "  'length': 0,\n",
+       "  'orderBy': '',\n",
+       "  'orderDirection': 'DESC'},\n",
+       " 'recordsTotal': 892,\n",
+       " 'recordsFiltered': 892,\n",
+       " 'draw': 0,\n",
+       " 'message': None}"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data"
    ]
