--- a/dags/parsing.ipynb
+++ b/dags/parsing.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "54b893e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mДля выполнения ячеек с \"Python 3.12.2\" требуется пакет ipykernel.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Создать среду Python</a> с необходимыми пакетами.\n",
+      "\u001b[1;31mИли установите \"ipykernel\" с помощью следующей команды: \"/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall\""
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import endpoints\n",
@@ -2859,7 +2870,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2873,7 +2884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
